# notes-viewer

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: make_icons.py
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
vault/notes/: 01-graphrag-intro.md  02-graphrag-architecture.md  03-knowledge-graphs.md  04-leiden-algorithm.md  05-entity-extraction.md  06-vector-embeddings.md  07-rag-vs-graphrag.md  08-applications.md  09-indexing-pipeline.md  10-query-processing.md  11-agentic-rag.md  12-rag-evaluation.md  13-advanced-retrieval.md  14-text2cypher.md  15-building-kg-from-text.md
