[package]
name = "notes-viewer"
version = "0.1.0"
description = "Markdown notes vault viewer (VS Code style preview)"
authors = ["notes-app"]
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
once_cell = "1"
tauri-plugin-shell = "2"

[profile.dev]
incremental = true # faster incremental builds
codegen-units = 256 # better incremental

[profile.release]
codegen-units = 1 # better optimizations
lto = true
strip = true
opt-level = "z" # optimize for size
panic = "abort"
